Fix the button to the bottom of the screen on mobile (seems to look a little better)

--- a/src/components/PledgeButton/pledgebutton.scss
+++ b/src/components/PledgeButton/pledgebutton.scss
@@ -6,6 +6,7 @@
         width: 100%;
         position: fixed;
         left: 0;
+        bottom: -60px;
         z-index: 100;
         background-color: rgba(0, 0, 0, .5);
         
